--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_MODULE_PATH}/gcc_stm32.cmake)
 SET(STM32_MIN_HEAP_SIZE 0x20000)
 SET(STM32_MIN_STACK_SIZE 0x2000)
 
-PROJECT(tdc74vxs4-blinky C)
+PROJECT(tdc72vxs4_poweron C)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 ENABLE_LANGUAGE(ASM)
