first running ttvxs mcu code
Matched with tdc72vxs4_rtos-v1.4-5-g44f13e0
Supports:
 - power monitor
 - PLL
 - IIC multiplexers (detect only)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,21 @@ SET(STM32_MIN_STACK_SIZE 0x2000)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 cmake_policy(SET CMP0048 NEW)
 
-PROJECT(tdc72vxs4_rtos VERSION 1.4 LANGUAGES C)
+PROJECT(ttvxs_rtos VERSION 1.4 LANGUAGES C)
 
 ENABLE_LANGUAGE(ASM)
 
 FIND_PACKAGE(CMSIS REQUIRED)
-FIND_PACKAGE(STM32HAL COMPONENTS dma i2c gpio smbus spi tim uart REQUIRED)
+FIND_PACKAGE(STM32HAL COMPONENTS adc can dma eth flash fmc gpio i2c qspi rcc sd sdram sdmmc smbus spi tim uart REQUIRED)
 
+SET(HAL_LL_COMPONENTS ${HAL_LL_COMPONENTS} gpio usart)
+file(GLOB_RECURSE HAL_LL_EXTRA_SOURCES
+   STM32Cube/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_*.c
+)
+
+SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${HAL_LL_EXTRA_SOURCES})
+
+add_compile_definitions(USE_FULL_LL_DRIVER)
 INCLUDE_DIRECTORIES(
 #    ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMSIS_INCLUDE_DIRS}
