--- a/app/version.h.in
+++ b/app/version.h.in
@@ -22,7 +22,7 @@
  extern "C" {
 #endif
 
-#define APP_NAME_STR "TDC72VXS4 BMC"
+#define APP_NAME_STR "TTVXS BMC"
 #define VERSION_MAJOR_NUM @PROJECT_VERSION_MAJOR@
 #define VERSION_MINOR_NUM @PROJECT_VERSION_MINOR@
 #define GIT_BRANCH @GIT_BRANCH@
