wip refactor, add i2c slave

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(CMAKE_MODULE_PATH cmake)
 SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_MODULE_PATH}/gcc_stm32.cmake)
 
 SET(STM32_MIN_HEAP_SIZE 0x20000)
-SET(STM32_MIN_STACK_SIZE 0x2000)
+SET(STM32_MIN_STACK_SIZE 0x200)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 cmake_policy(SET CMP0048 NEW)
@@ -24,7 +24,10 @@ ENABLE_LANGUAGE(ASM)
 FIND_PACKAGE(CMSIS REQUIRED)
 FIND_PACKAGE(STM32HAL COMPONENTS dma i2c gpio smbus spi tim uart REQUIRED)
 
-SET(HAL_LL_COMPONENTS ${HAL_LL_COMPONENTS} gpio usart)
+SET(HAL_LL_COMPONENTS ${HAL_LL_COMPONENTS} gpio i2c usart)
+file(GLOB_RECURSE HAL_LL_EXTRA_INCLUDES
+   STM32Cube/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_*.h
+)
 file(GLOB_RECURSE HAL_LL_EXTRA_SOURCES
    STM32Cube/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_*.c
 )
@@ -59,6 +62,7 @@ file(GLOB_RECURSE USER_INCLUDES
    common/*.h
    drivers/*.h
    app/*.h
+   ${HAL_LL_EXTRA_INCLUDES}
 )
 
 SET(PROJECT_SOURCES
@@ -95,6 +99,7 @@ ADD_EXECUTABLE(${ELF}
 TARGET_LINK_LIBRARIES(${ELF})
 STM32_SET_TARGET_PROPERTIES(${ELF})
 STM32_ADD_HEX_BIN_TARGETS(${ELF})
+STM32_ADD_DUMP_TARGET(${ELF})
 STM32_PRINT_SIZE_OF_TARGETS(${ELF})
 
 # Stack Smashing Protection
