--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,45 +33,23 @@ SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${HAL_LL_EXTRA_SOURCES})
 
 add_compile_definitions(USE_FULL_LL_DRIVER)
 
-### LwIP
-#SET(LWIP_DIR LwIP)
+### lwIP
 SET(LWIP_DIR external/lwip)
-
-add_compile_definitions(WITH_LWIP)
 add_compile_definitions(LWIP_DEBUG)
-add_compile_definitions(USE_DHCP)
-add_compile_definitions(HTTPD_USE_CUSTOM_FSDATA=1)
-
-file(GLOB_RECURSE LWIP_SOURCES
-   ${LWIP_DIR}/src/api/*.c
-   ${LWIP_DIR}/src/core/*.c
-   ${LWIP_DIR}/src/core/ipv4/*.c
-   ${LWIP_DIR}/src/netif/*.c
-   ${LWIP_DIR}/src/netif/ethernet/*.c
-   ${LWIP_DIR}/src/apps/http/fs.c
-   ${LWIP_DIR}/src/apps/http/httpd.c
+include(${LWIP_DIR}/src/Filelists.cmake)
+SET(LWIP_SOURCES
+   ${lwipcore_SRCS}
+   ${lwipcore4_SRCS}
+   ${lwipapi_SRCS}
+   ${lwipnetif_SRCS}
+   ${lwiphttp_SRCS}
    system/OS/sys_arch.c
-#   ${LWIP_DIR}/system/OS/*.c
-#   ${LWIP_DIR}/contrib/ports/freertos/sys_arch.c
-#   httpd/fs.c
-#   httpd/httpd.c
 )
 SET(LWIP_INCLUDE_DIRS
    ${LWIP_DIR}/src/include
-#   ${LWIP_DIR}/system
-#   ${LWIP_DIR}/contrib/ports/freertos/include
 )
-#set (LWIP_DEFINITIONS LWIP_DEBUG=1)
-include(${LWIP_DIR}/src/Filelists.cmake)
-
-## lwIP libraries
-#add_library(lwipcore EXCLUDE_FROM_ALL ${lwipnoapps_SRCS})
-#target_compile_options(lwipcore PRIVATE ${LWIP_COMPILER_FLAGS})
-#target_compile_definitions(lwipcore PRIVATE ${LWIP_DEFINITIONS}  ${LWIP_MBEDTLS_DEFINITIONS})
-#target_include_directories(lwipcore PRIVATE ${LWIP_INCLUDE_DIRS} ${LWIP_MBEDTLS_INCLUDE_DIRS})
 
 INCLUDE_DIRECTORIES(
-#    ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMSIS_INCLUDE_DIRS}
     ${STM32HAL_INCLUDE_DIR}
    ${FREERTOS_DIR}/Source/CMSIS_RTOS
@@ -85,7 +63,6 @@ INCLUDE_DIRECTORIES(
    app
    bsp
    eth
-   httpd
    system
 )
 
@@ -95,7 +72,10 @@ file(GLOB_RECURSE USER_SOURCES
    common/*.c
    drivers/*.c
    app/*.c
-   eth/*.c
+   eth/app_ethernet.c
+   eth/app_httpd_main.c
+   eth/ethernetif.c
+   eth/httpserver-netconn.c
 )
 file(GLOB_RECURSE USER_INCLUDES
    Inc/*.h
