implemented afi-bmc mib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,7 +112,7 @@ file(GLOB_RECURSE FREERTOS_SOURCES
 
 set(DATA_FILE
    doc/Doxyfile.in
-   mib/afi-sysmon.mib
+   mib/afi-bmc.mib
    README.md
    app/version.h.in
 )
