refactor to allow merge with ttvxs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,10 @@ SET(STM32_MIN_STACK_SIZE 0x200)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
 cmake_policy(SET CMP0048 NEW)
 
-# uncomment one
-#set(BOARD cru16)
-#set(BOARD tdc64)
-set(BOARD tdc72)
-#set(BOARD ttvxs)
+# use one of: cru16, tdc64, tdc72, ttvxs
+set(BOARD "tdc72" CACHE STRING "PCB variant")
+set_property(CACHE BOARD PROPERTY STRINGS cru16 tdc64 tdc72 ttvxs)
+message(STATUS "BOARD=${BOARD}")
 
 PROJECT(${BOARD}_rtos VERSION 1.11 LANGUAGES C CXX)
 set (CMAKE_CXX_STANDARD 11)
@@ -42,7 +41,6 @@ SET(STM32HAL_SOURCES ${STM32HAL_SOURCES} ${HAL_LL_EXTRA_SOURCES})
 
 add_compile_definitions(USE_FULL_LL_DRIVER)
 INCLUDE_DIRECTORIES(
-#    ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMSIS_INCLUDE_DIRS}
     ${STM32HAL_INCLUDE_DIR}
    ${FREERTOS_DIR}/CMSIS_RTOS
