remove Error_Handler() from set_csb()

--- a/app/version.h.in
+++ b/app/version.h.in
@@ -22,7 +22,11 @@
  extern "C" {
 #endif
 
-#define APP_NAME_STR "TDC72VXS4 BMC"
+#ifdef TDC64
+#define APP_NAME_STR "TDC64VHLE BMC"
+#else
+ #define APP_NAME_STR "TDC72VXS4 BMC"
+#endif
 #define VERSION_MAJOR_NUM @PROJECT_VERSION_MAJOR@
 #define VERSION_MINOR_NUM @PROJECT_VERSION_MINOR@
 #define GIT_BRANCH @GIT_BRANCH@
