--- a/app/tdc72/CMakeLists.txt
+++ b/app/tdc72/CMakeLists.txt
@@ -4,7 +4,7 @@ if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
     message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
 endif()
 
-SET(MY_TOP_DIR ../..)
+SET(MY_TOP_DIR ${CMAKE_SOURCE_DIR}/../..)
 SET(MY_EXT_DIR ${MY_TOP_DIR}/external)
 SET(MY_LIB_DIR ${MY_TOP_DIR})
 
@@ -235,56 +235,8 @@ SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -fstack-protector-all -fstack-usage -Wstack
 # Extra warnings
 SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wpedantic -Wextra -Wstrict-prototypes -Wdouble-promotion -Wswitch-enum -Wno-unused-parameter")
 
-# first we can indicate the documentation build as an option and set it to ON by default
-option(BUILD_DOC "Build documentation" ON)
-
-# check if Doxygen is installed
-find_package(Doxygen REQUIRED dot OPTIONAL_COMPONENTS mscgen dia)
-if (DOXYGEN_FOUND)
-    # set input and output files
-    set(DOXYGEN_IN ${MY_TOP_DIR}/doc/Doxyfile.in)
-    set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-
-    # request to configure the file
-    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
-    message("Doxygen build started")
-
-    # note the option ALL which allows to build the docs together with the application
-    add_custom_target( doc_doxygen
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM )
-else (DOXYGEN_FOUND)
-  message("Doxygen need to be installed to generate the doxygen documentation")
-endif (DOXYGEN_FOUND)
-
-find_package (Git)
-if (GIT_FOUND)
-      message("git found: ${GIT_EXECUTABLE} in version ${GIT_VERSION_STRING}")
-endif (GIT_FOUND)
-
-# Get the current working branch
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_BRANCH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-# Get the latest abbreviated commit hash of the working branch
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} log -1 --format=%h
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_COMMIT_HASH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-# Get the latest commit description
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} describe --always --tags --long --dirty
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_DESCR
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
+include(${MY_TOP_DIR}/cmake/Doxygen.cmake)
+include(${MY_TOP_DIR}/cmake/git_version.cmake)
 
 configure_file(
   ${MY_SRC_DIR}/version.h.in
