--- a/app/ttvxs/CMakeLists.txt
+++ b/app/ttvxs/CMakeLists.txt
@@ -4,7 +4,7 @@ if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
     message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
 endif()
 
-SET(MY_TOP_DIR ../..)
+SET(MY_TOP_DIR ${CMAKE_SOURCE_DIR}/../..)
 SET(MY_EXT_DIR ${MY_TOP_DIR}/external)
 SET(MY_LIB_DIR ${MY_TOP_DIR})
 
@@ -59,7 +59,6 @@ include_directories(
 
 ### lwIP
 SET(LWIP_DIR ${MY_EXT_DIR}/lwip)
-#SET(LWIP_CONTRIB_DIR external/lwip/contrib)
 add_compile_definitions(LWIP_DEBUG)
 include(${LWIP_DIR}/src/Filelists.cmake)
 #include(${LWIP_CONTRIB_DIR}/Filelists.cmake)
@@ -68,17 +67,16 @@ SET(LWIP_SOURCES
    ${lwipcore4_SRCS}
    ${lwipapi_SRCS}
    ${lwipnetif_SRCS}
-#   ${lwiphttp_SRCS}
    ${lwipsntp_SRCS}
    ${lwipsnmp_SRCS}
-#   ${lwipiperf_SRCS}
-#   ${lwipcontribexamples_SRCS}
    ${MY_LIB_DIR}/system/OS/sys_arch.c
 )
-SET(LWIP_INCLUDE_DIRS
-   ${LWIP_DIR}/src/include
-#   ${LWIP_CONTRIB_DIR}
+include_directories(
+    ${LWIP_DIR}/src/include
 )
+
+add_library(lwip STATIC ${LWIP_SOURCES})
+STM32_SET_TARGET_PROPERTIES(lwip)
 
 INCLUDE_DIRECTORIES(
     ${CMSIS_INCLUDE_DIRS}
@@ -239,7 +237,6 @@ set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -u_printf_float")
 SET(ELF ${CMAKE_PROJECT_NAME}.elf)
 ADD_EXECUTABLE(${ELF}
-    ${LWIP_SOURCES}
     ${PROJECT_SOURCES}
     ${DATA_FILE}
 )
@@ -256,7 +253,7 @@ TARGET_INCLUDE_DIRECTORIES(${ELF} PRIVATE
    ${MY_SRC_DIR}/tasks
    ${MY_SRC_DIR}/rtos
 )
-TARGET_LINK_LIBRARIES(${ELF} FreeRTOS CMSIS STM32HAL)
+TARGET_LINK_LIBRARIES(${ELF} lwip FreeRTOS CMSIS STM32HAL)
 STM32_SET_TARGET_PROPERTIES(${ELF})
 STM32_ADD_HEX_BIN_TARGETS(${ELF})
 STM32_ADD_DUMP_TARGET(${ELF})
@@ -267,56 +264,7 @@ SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -fstack-protector-all -fstack-usage -Wstack
 # Extra warnings
 SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wpedantic -Wextra -Wstrict-prototypes -Wdouble-promotion -Wswitch-enum -Wno-unused -Wno-unused-parameter")
 
-# first we can indicate the documentation build as an option and set it to ON by default
-option(BUILD_DOC "Build documentation" ON)
-
-# check if Doxygen is installed
-find_package(Doxygen REQUIRED dot OPTIONAL_COMPONENTS mscgen dia)
-if (DOXYGEN_FOUND)
-    # set input and output files
-    set(DOXYGEN_IN ${MY_TOP_DIR}/doc/Doxyfile.in)
-    set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-
-    # request to configure the file
-    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
-    message("Doxygen build started")
-
-    # note the option ALL which allows to build the docs together with the application
-    add_custom_target( doc_doxygen
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM )
-else (DOXYGEN_FOUND)
-  message("Doxygen need to be installed to generate the doxygen documentation")
-endif (DOXYGEN_FOUND)
-
-find_package (Git)
-if (GIT_FOUND)
-      message("git found: ${GIT_EXECUTABLE} in version ${GIT_VERSION_STRING}")
-endif (GIT_FOUND)
-
-# Get the current working branch
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_BRANCH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-# Get the latest abbreviated commit hash of the working branch
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} log -1 --format=%h
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_COMMIT_HASH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-# Get the latest commit description
-execute_process(
-  COMMAND ${GIT_EXECUTABLE} describe --always --tags --long --dirty
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_DESCR
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
+include(${MY_TOP_DIR}/cmake/git_version.cmake)
 
 configure_file(
   ${MY_SRC_DIR}/version.h.in
@@ -326,6 +274,7 @@ configure_file(
   ${MY_TOP_DIR}/build_id.in
   ${MY_TOP_DIR}/build_id
 )
+
 list(APPEND SOURCES ${MY_SRC_DIR}/version.h)
 
 add_custom_command(TARGET ${ELF} POST_BUILD
