--- a/app/tdc72/src/version.h.in
+++ b/app/tdc72/src/version.h.in
@@ -22,7 +22,13 @@
  extern "C" {
 #endif
 
+#include "bsp.h"
+#ifdef BOARD_TDC64
+#define APP_NAME_STR "TDC64VHLE BMC"
+#endif
+#ifdef BOARD_TDC72
 #define APP_NAME_STR "TDC72VXS4 BMC"
+#endif
 #define VERSION_MAJOR_NUM @PROJECT_VERSION_MAJOR@
 #define VERSION_MINOR_NUM @PROJECT_VERSION_MINOR@
 #define GIT_BRANCH @GIT_BRANCH@
