--- a/app/ttvxs/CMakeLists.txt
+++ b/app/ttvxs/CMakeLists.txt
@@ -91,6 +91,8 @@ file(GLOB_RECURSE BSP_SRCS
 )
 
 set(Dev_INC_DIRS
+    ${MY_LIB_DIR}/dev/ad9516
+    ${MY_LIB_DIR}/dev/ad9545
     ${MY_LIB_DIR}/dev/fpga
     ${MY_LIB_DIR}/dev/powermon
     ${MY_LIB_DIR}/dev/ttvxs_auxpll
@@ -98,6 +100,8 @@ set(Dev_INC_DIRS
     ${MY_LIB_DIR}/dev/ttvxs_vxsiic
 )
 file(GLOB_RECURSE Dev_SRCS
+    ${MY_LIB_DIR}/dev/ad9516/*
+    ${MY_LIB_DIR}/dev/ad9545/*
     ${MY_LIB_DIR}/dev/fpga/*
     ${MY_LIB_DIR}/dev/powermon/*
     ${MY_LIB_DIR}/dev/ttvxs_auxpll/*
